--- a/index.html
+++ b/index.html
@@ -32,14 +32,21 @@
             <h1 align="center">Oliver Paul</h1>
         </header>
         <figure>
-            <img src="./Oliver_1.jpg" width="150" height="250" class="center"/>
+            <img src="./Oliver_1.jpg" width="150" height="350" class="center"/>
             <figcaption>Hello World! My name is Oliver Paul</figcaption>
         </figure>
+		<figure>
+			<img src="./full_family.jpg" width="250" height="250" class="center"/>
+			<figcaption>For now, say Hi to my family<br>
+						This is my Mom, Dad, and big sister Peyton!
+			</figcaption>
+		</figure>
         <main>
             <section>
                <p>
                    Check back regularly to see all the new things that I will be doing and learning!<br>
-				   There is not much on here yet, but we will add new things all the time!
+				   There is not much on here yet, we just wanted to get something started.<br>
+				   But, we will add new things all the time!
                </p>
             </section>
         </main>
